surse/err80.txt
prob80.cpp: In member function ‘D D::operator+(const D&)’:
prob80.cpp:16:38: error: ‘int B::x’ is private within this context
     D operator+(const D& a) { return x + a.x; }
                                      ^